-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 12
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226494 | 11.0.5-oracle | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8219588 | 11.0.3 | Roland Westrelin | P3 | Resolved | Fixed | master |
| JDK-8219592 | openjdk8u212 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8310043 | 8u391 | Fairoz Matte | P3 | Resolved | Fixed | b01 |
jib > java.lang.RuntimeException: Intrinsic version [multiplyExact]didn't throw exception, NonIntrinsic version threw for: 9223372036854775807 + 1
jib > at compiler.intrinsics.mathexact.Verify.verifyResult(Verify.java:68)
jib > at compiler.intrinsics.mathexact.Verify.verifyBinary(Verify.java:142)
jib > at compiler.intrinsics.mathexact.Verify$ConstantLongTest.verify(Verify.java:249)
jib > at compiler.intrinsics.mathexact.MulExactLConstantTest.main(MulExactLConstantTest.java:39)
jib > at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
jib > at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
jib > at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
jib > at java.base/java.lang.reflect.Method.invoke(Method.java:567)
jib > at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:246)
jib > at java.base/java.lang.Thread.run(Thread.java:835)
jib >
jib > JavaTest Message: Test threw exception: java.lang.RuntimeException
jib > JavaTest Message: shutting down test
jib >
- backported by
-
JDK-8219588 test/hotspot/jtreg/compiler/intrinsics/mathexact/MulExactLConstantTest.java fails on Windows x64 when run with -XX:-TieredCompilation
-
- Resolved
-
-
JDK-8219592 test/hotspot/jtreg/compiler/intrinsics/mathexact/MulExactLConstantTest.java fails on Windows x64 when run with -XX:-TieredCompilation
-
- Resolved
-
-
JDK-8226494 test/hotspot/jtreg/compiler/intrinsics/mathexact/MulExactLConstantTest.java fails on Windows x64 when run with -XX:-TieredCompilation
-
- Resolved
-
-
JDK-8310043 test/hotspot/jtreg/compiler/intrinsics/mathexact/MulExactLConstantTest.java fails on Windows x64 when run with -XX:-TieredCompilation
-
- Resolved
-
- duplicates
-
JDK-8214204 Test compiler/intrinsics/mathexact/MulExactLConstantTest.java fails after JDK-8213419
-
- Closed
-
- relates to
-
JDK-8213419 C2 may hang in MulLNode::Ideal()/MulINode::Ideal() with gcc 8.2.1
-
- Resolved
-